RESOLVED FIXED196923
Several structures and enums in the Yarr interpreter can be shrunk
https://bugs.webkit.org/show_bug.cgi?id=196923
Summary Several structures and enums in the Yarr interpreter can be shrunk
Robin Morisset
Reported 2019-04-15 11:46:59 PDT
YarrOp: 88 -> 80 RegularExpression: 40 -> 32 ByteTerm: 56 -> 48 PatternTerm: 56 -> 48
Attachments
Patch (8.42 KB, patch)
2019-04-15 11:51 PDT, Robin Morisset
no flags
Robin Morisset
Comment 1 2019-04-15 11:51:17 PDT
Created attachment 367436 [details] Patch trivial shrinking of enums and reordering of the fields of structs.
EWS Watchlist
Comment 2 2019-04-15 11:53:57 PDT
Attachment 367436 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/yarr/YarrInterpreter.h:380: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2019-04-15 13:39:17 PDT
Comment on attachment 367436 [details] Patch Clearing flags on attachment: 367436 Committed r244286: <https://trac.webkit.org/changeset/244286>
WebKit Commit Bot
Comment 4 2019-04-15 13:39:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-04-15 13:40:19 PDT
Note You need to log in before you can comment on or make changes to this bug.