Several structures and enums in the Yarr interpreter can be shrunk https://bugs.webkit.org/show_bug.cgi?id=196923

Reviewed by Saam Barati.

YarrOp: 88 -> 80
RegularExpression: 40 -> 32
ByteTerm: 56 -> 48
PatternTerm: 56 -> 48

* yarr/RegularExpression.cpp:
* yarr/YarrInterpreter.h:
* yarr/YarrJIT.cpp:
(JSC::Yarr::YarrGenerator::YarrOp::YarrOp):
* yarr/YarrParser.h:
* yarr/YarrPattern.h:


Canonical link: https://commits.webkit.org/211187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244286 268f45cc-cd09-0410-ab3c-d52691b4dbfc