Source/JavaScriptCore/yarr/YarrInterpreter.h
@@ -39,7 +39,38 @@ namespace JSC { namespace Yarr {
 class ByteDisjunction;
 
 struct ByteTerm {
-    enum Type {
+    union {
+        struct {
+            union {
+                UChar32 patternCharacter;
+                struct {
+                    UChar32 lo;
+                    UChar32 hi;
+                } casedCharacter;
+                CharacterClass* characterClass;
+                unsigned subpatternId;
+            };
+            union {
+                ByteDisjunction* parenthesesDisjunction;
+                unsigned parenthesesWidth;
+            };
+            QuantifierType quantityType;
+            unsigned quantityMinCount;
+            unsigned quantityMaxCount;
+        } atom;
+        struct {
+            int next;
+            int end;
+            bool onceThrough;
+        } alternative;
+        struct {
+            bool m_bol : 1;
+            bool m_eol : 1;
+        } anchors;
+        unsigned checkInputCount;
+    };
+    unsigned frameLocation;
+    enum Type : uint8_t {
         TypeBodyAlternativeBegin,
         TypeBodyAlternativeDisjunction,
         TypeBodyAlternativeEnd,
@@ -72,37 +103,6 @@ struct ByteTerm {
         TypeUncheckInput,
         TypeDotStarEnclosure,
     } type;
-    union {
-        struct {
-            union {
-                UChar32 patternCharacter;
-                struct {
-                    UChar32 lo;
-                    UChar32 hi;
-                } casedCharacter;
-                CharacterClass* characterClass;
-                unsigned subpatternId;
-            };
-            union {
-                ByteDisjunction* parenthesesDisjunction;
-                unsigned parenthesesWidth;
-            };
-            QuantifierType quantityType;
-            unsigned quantityMinCount;
-            unsigned quantityMaxCount;
-        } atom;
-        struct {
-            int next;
-            int end;
-            bool onceThrough;
-        } alternative;
-        struct {
-            bool m_bol : 1;
-            bool m_eol : 1;
-        } anchors;
-        unsigned checkInputCount;
-    };
-    unsigned frameLocation;
     bool m_capture : 1;
     bool m_invert : 1;
     unsigned inputPosition;
@@ -377,7 +377,7 @@ public:
     std::unique_ptr<ByteDisjunction> m_body;
     OptionSet<Flags> m_flags;
     // Each BytecodePattern is associated with a RegExp, each RegExp is associated
-    // with a VM.  Cache a pointer to out VM's m_regExpAllocator.
+    // with a VM.  Cache a pointer to our VM's m_regExpAllocator.
     BumpPointerAllocator* m_allocator;
     ConcurrentJSLock* m_lock;
 
